kubernetes/mini/core/network/external-dns/app/networkpolicy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: external-dns

  egress:
    - toCIDRSet:
        - cidr: 192.168.1.234/32 # PiHole
      toPorts:
        - ports:
            - port: "3001"
          rules:
            http:
              - path: "/admin/scripts/pi-hole/php/customdns.php"
              - path: "/admin/scripts/pi-hole/php/customcname.php"
